# nextpnr

./: .gitignore  CMakeLists.txt
anlogic/: arch.cc  arch_pybindings.cc  archdefs.h  pack.cc
gowin/: arch.cc  arch.h  main.cc
himbaechel/: family.cmake
himbaechel/himbaechel_dbgen/: chip.py
himbaechel/uarch/gatemate/: CMakeLists.txt  constids.inc  extra_data.h  gatemate.cc  gatemate.h  gfxids.inc
